ui: Fix overlapping track titles
This patch prevents track titles from overflowing the bounds of the
track shell by clipping text and adding right-side ellipsis.

There's a more elegant solution here somewhere which doesn't involve
clipping the end of the title, but this fixes the immediate problem.

Before: https://screenshot.googleplex.com/BuAXnDMniSwPiNB.png
After: https://screenshot.googleplex.com/BdFpE2NLJeprNYs.png

Bug: 362655766

--- a/ui/src/assets/track_panel.scss
+++ b/ui/src/assets/track_panel.scss
@@ -19,10 +19,11 @@
   max-height: 30px;
   overflow: hidden;
   text-align: left;
-  overflow-wrap: break-word;
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 300;
   line-break: anywhere;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .track-content.pf-track-content-error {
